# fstore-cpp

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  packages.cmake
.gitea/workflows/: release.yml
db/: api.sql  data.sql  fstore.sql  init.sql  storage.sql
db/schemata/: storage.sql
include/: CMakeLists.txt  repo.h  service.h  util.h
include/fstore/: CMakeLists.txt  cli.h  client.h  client.hpp  core.h  entities.h  error.h  event.hpp  except.hpp  fstore  models.h  object_store.hpp  repo.h  service.h  table.h  test.h  types.h
include/fstore/conf/: settings.env.test.h  settings.h
include/fstore/core/: filesystem.h  model.h  object_store.h  part.h
include/fstore/model/: CMakeLists.txt  blob.hpp  bucket.hpp  file.hpp  model.hpp  object.hpp  object_error.hpp  remove_result.hpp  server_info.hpp  store_totals.hpp  time_point.hpp
include/fstore/net/: CMakeLists.txt  zipline.hpp
include/fstore/repo/: bucket.h  database.h  db.h  entity.h  filesystem.h  model.h  object.h  object_store.h  postgresql.h  store_totals.h
include/fstore/server/: router.hpp  server.h  server_info.h  transfer.h
include/fstore/service/: model.h  object_store.h  part.h  settings.h
include/internal/: cli.hpp  table.hpp
include/internal/conf/: settings.env.test.hpp  settings.hpp
include/internal/core/: object_store.hpp
include/internal/server/: router.hpp  server.hpp
mk/: db.mk  internal.mk
share/fstore/db/: api.sql  data.sql
src/: CMakeLists.txt
src/fstore/: CMakeLists.txt  bucket.cpp  cli.cpp  cli.h  cli.yaml  commands.h  main.cpp  object.cpp  object_store.cpp  prune.cpp  repo.cpp  service.cpp  status.cpp
src/fstore-test/repo/: bucket.cpp  object.cpp  repo.cpp
src/fstore.test/: CMakeLists.txt  directory.test.cpp  logger.test.cpp  main.test.cpp  repo.test.cpp  server.test.cpp
src/fstore/api/: CMakeLists.txt  api.cpp  api.h  api.hpp
src/fstore/client/: api.cpp  api.h
src/fstore/commands/: CMakeLists.txt  archive.cpp  bucket.cpp  check.cpp  commands.h  commands.hpp  db.cpp  errors.cpp  init.cpp  migrate.cpp  object.cpp  prune.cpp  restore.cpp  start.cpp  status.cpp  stop.cpp
src/fstore/db/: CMakeLists.txt  db.cpp  db.h  db.hpp
src/fstore/include/: cli.h  repo.h  service.h
src/fstore/options/: CMakeLists.txt  config.cpp  log_level.cpp  opts.hpp
src/fstore/server/: server.cpp
src/libconf/: CMakeLists.txt  settings.cpp  settings.env.test.cpp  settings.test.env.cpp  yaml.cpp  yaml.h  yaml.hpp
src/libcore/: CMakeLists.txt  bucket.cpp  crypto.cpp  data_size.cpp  fstore_error.cpp  object.cpp  object_store.cpp  part.cpp  uuid.cpp
src/libcore/database/: bucket.test.cpp  database.cpp  entity.cpp  mock_database.h  object.test.cpp
src/libcore/db/: CMakeLists.txt  bucket.test.cpp  connection.cpp  connection_wrapper.cpp  database.cpp  database.env.test.cpp  database.test.cpp  entity.hpp  object.test.cpp  pool.cpp
src/libcore/filesystem/: filesystem.cpp  filesystem.test.cpp  mock_filesystem.h
src/libcore/fs/: CMakeLists.txt  filesystem.cpp  filesystem.test.cpp  filesystem.test.hpp  part.cpp
src/libcore/functions/: CMakeLists.txt  add_object.cpp  check.cpp  commit_part.cpp  create_bucket.cpp  (+20 more)
src/libfstore/: CMakeLists.txt  bucket.cpp  client.cpp  client.test.cpp  error.cpp  except.cpp  object_store.cpp  part.cpp
src/librepo/: bucket.cpp  bucket.test.cpp  crypto.cpp  crypto.h  database.cpp  db.cpp  entity.cpp  filesystem.cpp  filesystem.h  filesystem.test.cpp  fs.cpp  object.cpp  object.test.cpp  object_store.cpp  postgresql.cpp  repo.cpp  repo.h  repo.test.cpp  test.h
src/libserver/: CMakeLists.txt  protocol.cpp  router.cpp  server.cpp
src/libservice/: bucket.cpp  object.cpp  object_store.cpp  part.cpp  providers.cpp  service.cpp  service.h  settings.cpp
src/libutil/: crypto.cpp  uuid.cpp
test/shell/: create
(+102 files in other folders)
